- engines
    - connections can be detached from their pool, closing on dereference
      instead of returning to the pool for reuse
- sql
    - _Label class overrides compare_self to return its ultimate object.
      meaning, if you say someexpr.label('foo') == 5, it produces
      the correct "someexpr == 5".
    - fix to long name generation when using oid_column as an order by
      (oids used heavily in mapper queries)
- orm
    - "delete-orphan" no longer implies "delete". ongoing effort to 
      separate the behavior of these two operations.
    - many-to-many relationships properly set the type of bind params
      for delete operations on the association table
    - many-to-many relationships check that the number of rows deleted
      from the association table by a delete operation matches the expected 
      results
    - session.get() and session.load() propigate **kwargs through to query
- mysql
    - support for column-level CHARACTER SET and COLLATE declarations,
      as well as ASCII, UNICODE, NATIONAL and BINARY shorthand.
- firebird
    - set max identifier length to 31
-extensions
    - new association proxy implementation, implementing complete
      proxies to list, dict and set-based relation collections
    - added orderinglist, a custom list class that synchronizes an object
      attribute with that object's position in the list
    - small fix to SelectResultsExt to not bypass itself during
      select().

0.3.7
- engines
    - warnings module used for issuing warnings (instead of logging)
    - cleanup of DBAPI import strategies across all engines 
      [ticket:480]
    - refactoring of engine internals which reduces complexity,
      number of codepaths; places more state inside of ExecutionContext
      to allow more dialect control of cursor handling, result sets.
      ResultProxy totally refactored and also has two versions of
      "buffered" result sets used for different purposes.